<package>
  <name>cob_hardware_test</name>
  <version>0.5.1</version>
  <description>This stack supports for automated hardware testing of the bringup layer.</description>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_hardware_test</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rostest</run_depend>
  <run_depend>cob_bringup</run_depend>
  <run_depend>cob_default_robot_config</run_depend>
  <!-- <test_depend>rostest</test_depend> -->
  <!-- <test_depend>cob_bringup</test_depend> -->
  <!-- <test_depend>cob_default_robot_config</test_depend> -->

  <export>

  </export>
</package>