<package>
  <name>cob_monitoring</name>
  <version>0.5.2</version>
  <description>cob_monitoring</description>
  
  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_monitoring</url>
  <!-- <url type="bugtracker"></url> -->

   <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>cob_script_server</run_depend>
  <run_depend>cob_relayboard</run_depend>
  <!-- <test_depend>cob_script_server</test_depend> -->
  <!-- <test_depend>cob_relayboard</test_depend> -->

  <export>

  </export>
</package>